--- a/src/index.css
+++ b/src/index.css
@@ -258,3 +258,8 @@ textarea:focus {
     flex-direction: column !important;
   }
 }
+
+.page-content.full-screen-page {
+  padding: 0 !important;
+  margin: 0 !important;
+}
